--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-Django==2.1.7
+Django==2.2.28
 django-cors-headers==3.2.0
-djangorestframework==3.11.0
-requests==2.24.0
-PyYAML==5.3.1
+djangorestframework==3.13.1
+requests==2.31.0
+PyYAML==5.4
+uwsgi==2.0.22
